--- a/authapp/templates/authapp/user_detail.html
+++ b/authapp/templates/authapp/user_detail.html
@@ -1,7 +1,6 @@
 {% extends "authapp/base.html" %}
-{% load static %}
 
-{% block conteiner %}
+{% block content %}
     <div>
         <h2 class="h2 red-text">{{ object.username }}</h2>
         <img src="/media/{{ object.avatar }}" class="photo-master">
