--- a/authapp/templates/authapp/edit.html
+++ b/authapp/templates/authapp/edit.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+{% extends "authapp/base.html" %}
+{% block content %}
+    <form method="POST" class="flex form" id="formsend" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form }}
+        <p>
+          <button type="submit" class="button-form btn btn-primary btn-block">
+            сохранить
+          </button>
+        </p>
 
-</body>
-</html>
+
+    </form>
