--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -1,11 +1,8 @@
 {% extends "authapp/base.html" %}
-{% load static %}
-
 {% block content %}
-    <form method="post" action="#" class="flex form" id="formsend">
+    <form method="post" class="flex form" id="formsend">
         {% csrf_token %}
-        <input type="text" name="phone" id="phone" placeholder="Логин" class="input-form"/>
-
+        <input type="text" name="username" id="username" placeholder="Логин" class="input-form"/>
         <input type="password" name="password" id="password" placeholder="Пароль" class="input-form"/>
         <button type="submit" class="button-form">Вход</button>
     </form>
