--- a/authapp/templates/authapp/user_edit.html
+++ b/authapp/templates/authapp/user_edit.html
@@ -3,11 +3,8 @@
     <form method="POST" class="flex form" id="formsend" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form }}
-        <p>
-          <button type="submit" class="button-form btn btn-primary btn-block">
+        <button type="submit" class="button-form btn btn-primary btn-block">
             сохранить
-          </button>
-        </p>
-
-
+        </button>
     </form>
+{% endblock %}
