- filter by category service

--- a/mainapp/templates/mainapp/categoryservice_list.html
+++ b/mainapp/templates/mainapp/categoryservice_list.html
@@ -6,6 +6,8 @@
         <h2 class="h2">Услуги салона</h2>
         <div class="grid grid--3-cols">
             {% for service in object_list %}
+                <a href="{% url 'mainapp:gallery_category_service' service.pk %}">
+
                 <div class="services-block">
                     <img
                             src="media/{{ service.photo }}"
@@ -15,7 +17,7 @@
                     <p class="service-description">{{ service.name }}</p>
                 </div>
             {% endfor %}
-
+            </a>
         </div>
     </section>
 
