--- a/mainapp/templates/mainapp/price.html
+++ b/mainapp/templates/mainapp/price.html
@@ -23,62 +23,21 @@
                 <div class="price-block middle">Время</div>
                 <div class="price-block middle">Цена</div>
             </div>
+            {% for service in services %}
             <div class="flex price-row">
-                <div class="price-block price-big left">Стрижка женская</div>
-                <div class="price-block middle red-text price-end">1-1,5 ч.</div>
-                <div class="price-block red-text price-end">от 900 р.</div>
+                <div class="price-block price-big left">{{ service }}</div>
+                {% if service.duration > 59 %}
+                <div class="price-block middle red-text price-end">{% widthratio service.duration 60.0 1 %} ч.</div>
+                {% else %}
+                <div class="price-block middle red-text price-end">менее 1 часа</div>
+                {% endif %}
+                <div class="price-block red-text price-end">от {{ service.price|floatformat:-2 }}р.</div>
             </div>
             <p class="price-small">
-                В услугу входит: мытье головы, стрижка, сушка с&nbsp;использованием
-                укладочных средств
+                В услугу входит: {{ service.short_description }}
             </p>
-            <div class="flex price-row">
-                <div class="price-block left">
-                    <p class="price-big left">Укладка</p>
-                </div>
-                <div class="price-block middle red-text price-end">от 30 мин.</div>
-                <div class="price-block red-text price-end">от 600 р.</div>
-            </div>
-            <p class="price-small">В услугу входит: мытье головы</p>
-            <div class="flex price-row">
-                <div class="price-block left">
-                    <p>Сложная укладка (стайлеп, щипцы)</p>
-                </div>
-                <div class="price-block right red-text price-end">от 800 р.</div>
-            </div>
-            <div class="flex price-row">
-                <div class="price-block price-big left">Прическа</div>
-                <div class="price-block red-text price-end">от 1500 р.</div>
-            </div>
-            <p class="price-small">В услугу входит: мытье головы</p>
-            <div class="flex price-row">
-                <div class="price-block left">
-                    <p class="price-big">Окрашивание волос</p>
-                </div>
-                <div class="price-block middle red-text price-end">от 1,5 ч.</div>
-                <div class="price-block red-text price-end">от 3000 р.</div>
-            </div>
-            <p class="price-small">
-                В услугу входит: мытье головы и сушка волос с&nbsp;использованием
-                укладочных средств
-            </p>
-            <div class="flex price-row">
-                <div class="price-block left">
-                    <p>Сложные виды окрашивания</p>
-                </div>
-                <div class="price-block right red-text price-end">от 5000 р.</div>
-            </div>
-            <div class="flex price-row">
-                <div class="price-block price-big left">
-                    Уход за волосами от Wella
-                </div>
-                <div class="price-block middle red-text price-end">1-1,5 ч.</div>
-                <div class="price-block red-text price-end">от 1300 р.</div>
-            </div>
-            <p class="price-small left">
-                В услугу входит: мытье головы, уход, укладка волос
-            </p>
-        </div>
+            {% endfor %}
+
         <div id="nails" class="prices">
             <div class="price-table">
                 <div class="flex price-row">
