Edit class Service(models.Model): added verbose_names

--- a/mainapp/templates/mainapp/price.html
+++ b/mainapp/templates/mainapp/price.html
@@ -55,9 +55,7 @@
                     масла для кутикулы
                 </p>
                 <div class="flex price-row">
-                    <div class="price-block left">
-                        <p>Женский маникюр</p>
-                    </div>
+                    <div class="price-block left">Женский маникюр</div>
                     <div class="price-block middle red-text price-end">1-1,5 ч.</div>
                     <div class="price-block red-text price-end">700 р.</div>
                 </div>
